WIP: memorypool-based allocator, vector-based ULongArray
this compiles, and it's surprisingly little code

--- a/src/backend/gporca/libgpos/src/common/Makefile
+++ b/src/backend/gporca/libgpos/src/common/Makefile
@@ -23,7 +23,8 @@ OBJS        = CAutoTimer.o \
               CTimerUser.o \
               CWallClock.o \
               clibwrapper.o \
-              syslibwrapper.o
+              syslibwrapper.o \
+              ULongArray.o
 
 include $(top_srcdir)/src/backend/common.mk
 
