Use default GCC/Clang toolchain from Travis CI.
This commit removes the ubuntu-toolchain-r-test repo from our Travis CI
environment, and reverts the choice of GCC-8 to whatever Ubuntu provides
from its main repository. In general, the ubuntu-toolchain-r-test repo
is unstable, but it only recently manifests itself as a package conflict
in the xenial+clang job in the matrix.  The folklore of having to add
ubuntu-toolchain-r-test was a relic from the olden days of Ubuntu 12.04
and 14.04, when running mildly modern version of Clang (3.3?) needed a
backport of glibc from ubuntu-toolchain-r-test. Starting from Ubuntu
16.04 (Xenial) this is no longer true.

Note I also had to bump up the OS to Ubuntu Bionic for the Clang 7 build
because libstdc++ from GCC 5 (the version shipped in Ubuntu Xenial) has
a bug (https://wg21.link/N4387) that's only fixed in GCC 6+ (without the
bug fix our build will error out).

While I was at it, also remove the unnecessary additional LLVM sources
from the job given that Ubuntu Focal (20.04) does provide an LLVM-11
package.

(cherry picked from commit 31bf4dbd0bf8bd1a88057ba05a46e2a6fbcbedf6)

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,16 +12,12 @@ addons:
     apt:
         config:
             retries: true
-        sources: &common_sources
-            - ubuntu-toolchain-r-test
         packages: &common_packages
-            - gcc-8
             - libxml2
             - libxml2-dev
             - libevent-dev
             - libperl-dev
             - libuv1-dev
-            - g++-8
             - python-dev
             - python-yaml
             - libapr1-dev
@@ -33,34 +29,18 @@ matrix:
         # OS and Compiler variations
         # ----------------------------------------------------------------
         #
-        # Ubuntu Bionic, gcc 8
+        # Ubuntu Bionic, gcc 7
         - os: linux
           dist: bionic
           compiler: gcc
           env:
               - T=debug C=""
-              - OVERRIDE_CC="CC=gcc-8" OVERRIDE_CXX="CXX=g++-8"
-          addons:
-              apt:
-                  sources:
-                      - *common_sources
-                  packages:
-                      - *common_packages
-        # Ubuntu Xenial, clang 7
+        # Ubuntu Bionic, clang 7
         - os: linux
-          dist: xenial
+          dist: bionic
           compiler: clang
           env:
               - T=debug C=""
-              - OVERRIDE_CC="CC=clang-7" OVERRIDE_CXX="CXX=clang++-7"
-          addons:
-              apt:
-                  sources:
-                      - *common_sources
-                      - llvm-toolchain-xenial-7
-                  packages:
-                      - *common_packages
-                      - clang-7
         # macOS, XCode11
         - os: osx
           compiler: clang
@@ -76,10 +56,6 @@ matrix:
           dist: bionic
           addons:
             apt:
-              sources:
-                - *common_sources
-                - sourceline: 'deb http://apt.llvm.org/bionic/ llvm-toolchain-bionic-10 main'
-                  key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
               packages:
                 - clang-format-10
                 - parallel
