Assorted functors for Vector::Sort
This prepares us to switch to the new container of gpos::Vector after
conversion. These functors will be the used for Vector::Sort (in lieu of
CDynamicPtrArray::Sort).

--- a/src/backend/gporca/libgpopt/src/xforms/Makefile
+++ b/src/backend/gporca/libgpopt/src/xforms/Makefile
@@ -131,7 +131,8 @@ OBJS        = CDecorrelator.o \
               CXformUnnestTVF.o \
               CXformUpdate2DML.o \
               CXformUtils.o \
-              CxformSelect2DynamicBitmapBoolOp.o
+              CxformSelect2DynamicBitmapBoolOp.o \
+              ProjectElementArrayLess.o
 
 include $(top_srcdir)/src/backend/common.mk
 
