--- a/src/backend/gporca/libgpopt/src/base/Makefile
+++ b/src/backend/gporca/libgpopt/src/base/Makefile
@@ -74,6 +74,7 @@ OBJS        = CAutoOptCtxt.o \
               CUtils.o \
               CWindowFrame.o \
               CWindowOids.o \
+              DatumLess.o \
               IColConstraintsMapper.o
 
 include $(top_srcdir)/src/backend/common.mk
